force-app/main/default/objects/NotaFiscal__c/NotaFiscal__c.object-meta.xml
<CustomObject>
    <description>Nota fiscal de compra enviada pelo cliente para ganhar pontos.</description>
    <label>Nota Fiscal</label>
    <nameField>
        <displayFormat>NF-{0000}</displayFormat>
        <label>Numero da Nota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas Fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>