force-app/main/default/objects/NotaFiscal__c/fields/Chave_Acesso__c.field-meta.xml
<CustomField>
    <fullName>Chave_Acesso__c</fullName>
    <description>Chave de acesso de 44 digitos da NFC-e. Usada para impedir que a mesma nota gere pontos duas vezes.</description>
    <externalId>true</externalId>
    <label>Chave de Acesso da NFC-e</label>
    <length>44</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>