force-app/main/default/objects/NotaFiscal__c/fields/Estabelecimento__c.field-meta.xml
<CustomField>
    <fullName>Estabelecimento__c</fullName>
    <label>Estabelecimento</label>
    <length>120</length>
    <type>Text</type>
</CustomField>