force-app/main/default/objects/NotaFiscal__c/fields/Pontos_Gerados__c.field-meta.xml
<CustomField>
    <fullName>Pontos_Gerados__c</fullName>
    <label>Pontos Gerados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>