force-app/main/default/objects/NotaFiscal__c/fields/Recomendacao_IA__c.field-meta.xml
<CustomField>
    <fullName>Recomendacao_IA__c</fullName>
    <description>Recomendacao de produto para resgate, gerada por IA (Prompt Builder) com base nos itens desta compra.</description>
    <label>Recomendacao da IA</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>