force-app/main/default/objects/NotaFiscal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Processada</fullName>
            </value>
            <value>
                <fullName>Rejeitada_Duplicada</fullName>
                <label>Rejeitada - Nota Duplicada</label>
            </value>
            <value>
                <fullName>Erro_Processamento</fullName>
                <label>Erro no Processamento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>