force-app/main/default/objects/NotaFiscal__c/fields/Texto_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Texto_Bruto__c</fullName>
    <description>Texto da nota fiscal colado ou digitado pelo cliente, antes de ser interpretado pela IA.</description>
    <label>Texto Bruto da Nota</label>
    <length>32000</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>